# hawkbit-rs

./: README.md
.github/workflows/: ci.yml
hawkbit/: Cargo.toml  README.md
hawkbit/examples/: polling.rs
hawkbit/src/: ddi.rs
hawkbit/src/ddi/: cancel_action.rs  client.rs  common.rs  confirmation_base.rs  deployment_base.rs  poll.rs
hawkbit/tests/: tests.rs
hawkbit_mock/: Cargo.toml
hawkbit_mock/src/: ddi.rs
